# avif.app

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: avif.rs  main.rs  yuv.rs
